# Multimodal-Economic-RAG-Assistant

./: .env.example  .env.vast.example  .gitignore  Makefile  README.md  README.vi.md  conftest.py  docker-compose.dev.yaml  docker-compose.vast.yaml  docker-compose.yaml  docker-compose.yml  docker-compose.yml.legacy  main.py  pyproject.toml
.claude/agents/: docker-gpy-reviewer.md
api/: Dockerfile  requirements.txt
api/orchestrator/: config.py  main.py  tracing.py
docs/: 2026-03-24-backend-rag-remediation-plan.md  2026-03-24-project-assessment-and-roadmap-review.md  vast-ai-deployment.md
docs/diagrams/: 01_system_architecture.mmd  02_rag_pipeline_state_machine.mmd  03_data_ingestion_flow.mmd  04_guard_state_machine.mmd  04b_guard_orchestrator_integration.mmd  05_hybrid_retrieval_flow.mmd  06_error_handling_state_machine.mmd  07_docker_network_topology.mmd  08_phase_evolution.mmd  09_multimodal_system_architecture.mmd  10_multimodal_rag_pipeline_state_machine.mmd  11_data_pipeline_flow.mmd  12_pdf_visual_processing_flow.mmd  13_implementation_gantt.mmd  14_phase_dependency_graph.mmd  15_on_demand_gpu_state_machine.mmd  16_multimodal_sequence_diagram.mmd  architecture_sequence_diagram.mmd  request-processing-flow.excalidraw  system-architecture-overview.excalidraw
docs/specs/: 2026-03-22-central-config-loguru-design.md
infra/docker/: app.cpu.Dockerfile  app.gpu.Dockerfile
orchestrator/: Dockerfile  requirements.txt
orchestrator/orchestrator/: config.py  main.py
scripts/: Dockerfile  chunker.py  dev-compose.sh  ingest.py  qdrant_bootstrap.py  qdrant_snapshot_restore.py  quantize_awq.py  quantize_awq_legacy.py  quantize_llmcompressor.py  requirements-quantize.txt  requirements.txt
services/asr/: Dockerfile  asr_app.py  requirements.txt
services/embedding/: Dockerfile  app.py  embedding_app.py  main.py  requirements.txt
services/guard/: Dockerfile  app.py  guard_app.py  requirements.txt
services/inference/: inference_app.py  requirements.txt
services/reranker/: Dockerfile  app.py  requirements.txt  reranker_app.py
services/tts/: Dockerfile  __init__.py  abbreviations.py  requirements.txt  (+2 more)
tests/: test_compose.py
tunnel/: config.yml
(+85 files in other folders)
