[project]
name = "multimodal-economic-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "fastembed>=0.7.4",
    "httpx>=0.28.1",
    "langsmith>=0.7.22",
    "qdrant-client>=1.17.1",
    "underthesea>=9.2.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
