[project]
name = "multimodal-economic-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "fastembed>=0.7.4",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "httpx>=0.28.1",
    "qdrant-client>=1.17.1",
    "openai==1.82.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "langsmith>=0.7.22",
    "langgraph==1.1.3",
    "loguru>=0.7.0",
    "underthesea>=9.2.11",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
